Phase 2 F1b — pill exterior-container CPU revival (PASS)
Resolve the axis-convention mismatch in Bug.amICollidingOuter /
amICollidingInner (and the rdmPtInside* placement helpers) by
transforming the from-inside collision math into the pill body frame
(survey option b). Preserves uVec=(0,1,0) and leaves the Listeria
from-outside path untouched. Polymerizing-actin smoke run confirms
filament confinement (caps + cylinder) and that polymerizing barbed
ends do not grow through the wall — the existing CPU bugForcesFromInside
tipC=0 + stericHindranceEnd2 gate works correctly under the new body-frame
math.

CPU-only; no device-kernel changes. The companion correction to the
F1 (box) JOURNAL entry restates end1TipC/end2TipC as a live polymerization-
clearance gate (only appears dead in stabilized-filament gliding/bench
workloads); device boundaryBoxKernel omits tipC, so polymerizing box runs
must keep BOA_DIAG_CPU_F1=1 until tipC write-back lands.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>